HHH-14496 - Remove IdGeneratorStrategyInterpreter
preliminary work - make IdentifierGenerator resolution a singular event (phase, second pass, ...) - "eye of the needle"